add feature to pick between qr code and barcode
